--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "i18next": "^23.12.1",
@@ -19,7 +20,10 @@
     "next-intl": "^3.17.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.3"
+    "react-hook-form": "^7.52.2",
+    "react-i18next": "^14.1.3",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
