--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,64 +1,64 @@
 {
   "name": "Workouts.cool",
   "short_name": "Workouts",
-  "theme_color": "#35155D",
-  "background_color": "#ffffff",
+  "theme_color": "#FFCA0F",
+  "background_color": "#000",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
   "icons": [
     {
-      "src": "icons/icon-48x48.png",
-      "sizes": "48x48",
+      "src": "icons/icon-48-48.png",
+      "sizes": "48-48",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-72x72.png",
-      "sizes": "72x72",
+      "src": "icons/icon-72-72.png",
+      "sizes": "72-72",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-96x96.png",
-      "sizes": "96x96",
+      "src": "icons/icon-96-96.png",
+      "sizes": "96-96",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-128x128.png",
-      "sizes": "128x128",
+      "src": "icons/icon-128-128.png",
+      "sizes": "128-128",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-144x144.png",
-      "sizes": "144x144",
+      "src": "icons/icon-144-144.png",
+      "sizes": "144-144",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-152x152.png",
-      "sizes": "152x152",
+      "src": "icons/icon-152-152.png",
+      "sizes": "152-152",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
+      "src": "icons/icon-192-192.png",
+      "sizes": "192-192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-384x384.png",
-      "sizes": "384x384",
+      "src": "icons/icon-384-384.png",
+      "sizes": "384-384",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
+      "src": "icons/icon-512-512.png",
+      "sizes": "512-512",
       "type": "image/png",
       "purpose": "maskable any"
     }
