--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
     "i18next": "^23.12.1",
+    "jose": "^5.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
